fix: self-heal build attempt 3 for BOK-21